@@ -1,3 +1,15 @@
+Wed Oct 17 16:03:54 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c (vm_call_method_missing): make a refactoring
+	  about method_missing process. Use `vm_call_method()' to invoke
+	  `method_missing' method instead of `rb_funcall2()'.
+	  In `vm_call_method()', set fastpath to `vm_call_method_missing()'
+	  if it can be cached.
+
+	* vm_core.h (rb_call_info_t): add new field
+	  `rb_call_info_t::aux::missing_reasion' to pass the reason to
+	  `vm_call_method_missing()'.
+
 Wed Oct 17 15:33:12 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (opt-dir): allow multiple directories separated by
